# src/swagger.json
@@ -33,6 +33,23 @@
           "Users"
         ],
         "summary": "Get all users in system",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "viewUser",
+        "produces": "application/xml,application/json",
+        "parameters": [
+          {
+            "name": "from",
+            "in": "query",
+            "required": "true",
+            "description": "From Record"
+          },
+          {
+            "name": "to",
+            "in": "query",
+            "required": "true",
+            "description": "To Record"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
